--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" type="image/x-icon" href="icons8-chef-hat-ios-16-32.png">
+    <link rel="icon" type="image/x-icon" href="./images/chef-hat.png">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
